fixing white space on bottom of site

--- a/src/styles/components/Nav.css
+++ b/src/styles/components/Nav.css
@@ -10,14 +10,17 @@
 .about-link {
   grid-area: A2;
   text-decoration: none;
+  color: black;
 }
 
 .projects-link {
   grid-area: A3;
   text-decoration: none;
+  color: black;
 }
 
 .contact-link {
   grid-area: A4;
   text-decoration: none;
+  color: black;
 }
